need to implement - operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,13 @@ project(alpha_Interpreter)
 
 set(CMAKE_CXX_STANDARD 26)
 
-#we add all our include directories
-include_directories(
-        ${CMAKE_SOURCE_DIR}/Token
-)
-
-#we add our libraries
-add_library(Token ${CMAKE_SOURCE_DIR}/Token/tokenizer.cpp)
-
 set(SOURCES
     main.cpp
-        AST/AST.cpp
-        AST/AST.h)
+        Token/Token.cpp
+        Token/Token.h
+        Token/TokenType.h
+        Interpreter/Interpreter.cpp
+        Interpreter/Interpreter.h)
 
-# we set all our sources
 add_executable(alpha_Interpreter ${SOURCES}
 )
-
-target_link_libraries(alpha_Interpreter Token)
