more organized better code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,10 @@
 cmake_minimum_required(VERSION 3.29)
-project(alpha_Interpreter)
+project(Alpha)
 
 set(CMAKE_CXX_STANDARD 26)
 
-set(SOURCES
-    main.cpp
-        Token/Token.cpp
-        Token/Token.h
-        Token/TokenType.h
+add_executable(Alpha main.cpp
         Interpreter/Interpreter.cpp
-        Interpreter/Interpreter.h)
-
-add_executable(alpha_Interpreter ${SOURCES}
-)
+        Interpreter/Interpreter.h
+        Token/TokenType.h
+        Token/Token.h)
