ability to write expressions with paranthesis!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,13 @@ set(CMAKE_CXX_STANDARD 26)
 ##directories to include
 include_directories(${CMAKE_SOURCE_DIR}/Error
                     ${CMAKE_SOURCE_DIR}/Interpreter
-                    ${CMAKE_SOURCE_DIR}/Token)
+                    ${CMAKE_SOURCE_DIR}/Token
+                    ${CMAKE_SOURCE_DIR}/Lexer)
 
 ##source files
 set(SOURCES
         main.cpp
         Interpreter/Interpreter.cpp
-        Error/Error.cpp
-        Lexer/Lexer.cpp
-        Lexer/Lexer.h)
+        Error/Error.cpp)
 
 add_executable(Alpha ${SOURCES})
