AST trial #1 (fail :()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,19 @@ project(Alpha)
 
 set(CMAKE_CXX_STANDARD 26)
 
-##directories to include
+## Directories to include
 include_directories(${CMAKE_SOURCE_DIR}/Error
-                    ${CMAKE_SOURCE_DIR}/Interpreter
-                    ${CMAKE_SOURCE_DIR}/Token
-                    ${CMAKE_SOURCE_DIR}/Lexer)
+        ${CMAKE_SOURCE_DIR}/Interpreter
+        ${CMAKE_SOURCE_DIR}/Token
+        ${CMAKE_SOURCE_DIR}/Lexer
+        ${CMAKE_SOURCE_DIR}/Lexer/AST)
 
-##source files
+## Source files
 set(SOURCES
         main.cpp
         Interpreter/Interpreter.cpp
         Error/Error.cpp
-        Lexer/Lexer.cpp)
+        Lexer/Lexer.cpp
+)
 
 add_executable(Alpha ${SOURCES})
