--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,23 @@ set(CMAKE_CXX_STANDARD 26)
 
 ## Directories to include
 include_directories(${CMAKE_SOURCE_DIR}/Error
-        ${CMAKE_SOURCE_DIR}/Interpreter
+        ${CMAKE_SOURCE_DIR}/Parser
         ${CMAKE_SOURCE_DIR}/Token
         ${CMAKE_SOURCE_DIR}/Lexer
-        ${CMAKE_SOURCE_DIR}/Lexer/AST)
+        ${CMAKE_SOURCE_DIR}/Lexer/AST
+        ${CMAKE_SOURCE_DIR}/Expression
+        ${CMAKE_SOURCE_DIR}/Interpreter)
 
 ## Source files
 set(SOURCES
         main.cpp
-        Interpreter/Interpreter.cpp
+        Parser/Parser.cpp
         Error/Error.cpp
         Lexer/Lexer.cpp
+        Expression/Expression.h
+        Interpreter/Interpreter.cpp
+        Expression/Expression.cpp
+
 )
 
 add_executable(Alpha ${SOURCES})
